# git_manage

./: .env.gpg  .gitignore  .project  .pydevproject  00Repo Overview.txt  Readme.md  pyproject.toml
OLD/: list_repos r00.py  list_repos.py
src/: check_dirs.py  convert_nb.py  list_repos r01.py  list_repos.ipynb  list_repos.py  test44.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  list_repos-checkpoint.ipynb
