[tool.poetry]
name = "util_managegitrepos"
version = "0.1.0"
description = "Manage Github repos and organizations"
authors = ["MarcusJones <jones.0bj3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
PyGithub = "^1.53"
pandas = "^1.1.4"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
